fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -34,16 +34,13 @@ body {
 	margin-top: 5%;
 	width: 330px;
 	height: 150px;
-	padding: 15px;
 	
 }
 
 
 p{
   color: black; 
-  font-family: "Courier";
   font-size: 20px;
-  margin: 10px 0 0 10px;
   white-space: nowrap;
   overflow: hidden;
   width: 30em;
@@ -58,7 +55,6 @@ p a{
   color: black;
   text-decoration: none;
 }
-
 
 @keyframes type{ 
   from { width: 0; } 
